--- a/movie.html
+++ b/movie.html
@@ -17,6 +17,12 @@
     		background-color: #333;
     		text-shadow: 0 1px 3px rgba(0,0,0,.5);
 		}
+		.title {
+			font-size: 24px;
+		}
+		.title:last-child {
+			margin-top: 15px;
+		}
 		body a, body a:hover {
 			color: #fff;
 			font-size: 20px;
@@ -35,17 +41,29 @@
 					<img src="cover.png" style="width: 100%;">
 				</div>
 				<div class="col-md-9">
-					<a href="https://www.youtube.com/watch?v=Se4YBL4frC0">1장 Hello 애플리케이션</a><br>
-					<a href="https://www.youtube.com/watch?v=Se4YBL4frC0">2장 버튼 애플리케이션</a><br>
-					<a href="https://www.youtube.com/watch?v=Se4YBL4frC0">3장 스위프트 기본</a><br>
-					<a href="https://www.youtube.com/watch?v=Se4YBL4frC0">3장 프로그램이란</a><br>
-					<a href="https://www.youtube.com/watch?v=Se4YBL4frC0">3장 데이터</a><br>
-					<a href="https://www.youtube.com/watch?v=Se4YBL4frC0">3장 자료형</a><br>
-					<a href="https://www.youtube.com/watch?v=Se4YBL4frC0">3장 프로그램 제거</a><br>
-					<a href="https://www.youtube.com/watch?v=Se4YBL4frC0">3장 여러 개의 데이터 다루기</a><br>
-					<a href="https://www.youtube.com/watch?v=Se4YBL4frC0">3장 함수(메서드)</a><br>
-					<a href="https://www.youtube.com/watch?v=Se4YBL4frC0">3장 Optional 자료형</a><br>
-					<a href="https://www.youtube.com/watch?v=Se4YBL4frC0">3장 클래스</a>
+					<div class="title">[Tutorial _ 예제 따라하기]</div>
+					<a href="https://youtu.be/UqHSVO4zd5A?list=PLc91J-KoFBX_wrskfjdz6AmhwpcASqsTz">1장 Hello 애플리케이션</a><br>
+					<a href="https://youtu.be/IGPiVWcX4ao?list=PLc91J-KoFBX_wrskfjdz6AmhwpcASqsTz">2장 버튼 애플리케이션</a><br>
+					<a href="https://youtu.be/rRbULl5BjrY?list=PLc91J-KoFBX_wrskfjdz6AmhwpcASqsTz">3장 스위프트 기본</a><br>
+					<a href="https://youtu.be/1kmV-_QcNzk?list=PLc91J-KoFBX_wrskfjdz6AmhwpcASqsTz">3장 프로그램이란</a><br>
+					<a href="https://youtu.be/PNB35snHlr8?list=PLc91J-KoFBX_wrskfjdz6AmhwpcASqsTz">3장 데이터</a><br>
+					<a href="https://youtu.be/zuJOEFrUMrc?list=PLc91J-KoFBX_wrskfjdz6AmhwpcASqsTz">3장 자료형</a><br>
+					<a href="https://youtu.be/OKydXd0aVjY?list=PLc91J-KoFBX_wrskfjdz6AmhwpcASqsTz">3장 프로그램 제거</a><br>
+					<a href="https://youtu.be/A0yQaLmY2N8?list=PLc91J-KoFBX_wrskfjdz6AmhwpcASqsTz">3장 여러 개의 데이터 다루기</a><br>
+					<a href="https://youtu.be/oHTdJ1tZ7oA?list=PLc91J-KoFBX_wrskfjdz6AmhwpcASqsTz">3장 함수(메서드)</a><br>
+					<a href="https://youtu.be/3gz0cJPiwQ8?list=PLc91J-KoFBX_wrskfjdz6AmhwpcASqsTz">3장 Optional 자료형</a><br>
+					<a href="https://youtu.be/YI7RbfmTdho?list=PLc91J-KoFBX_wrskfjdz6AmhwpcASqsTz">3장 클래스</a><br>
+					<a href="https://youtu.be/6LVsHzo20aA?list=PLc91J-KoFBX_wrskfjdz6AmhwpcASqsTz">4장 기본적인 부품으로 애플리케이션 만들기(UIKit)</a><br>
+					<a href="https://youtu.be/uZYneMDyRxA?list=PLc91J-KoFBX_wrskfjdz6AmhwpcASqsTz">4장 가위바위보 애플리케이션(화면디자인)</a><br>
+					<a href="https://youtu.be/LGEFx1TL93g?list=PLc91J-KoFBX_wrskfjdz6AmhwpcASqsTz">4장 가위바위보 애플리케이션(프로그램 제작)</a><br>
+					<a href="https://youtu.be/yyOInpz6ITY?list=PLc91J-KoFBX_wrskfjdz6AmhwpcASqsTz">5장 웹사이트 출력</a><br>
+					<a href="https://youtu.be/tJHN8Ynz8ps?list=PLc91J-KoFBX_wrskfjdz6AmhwpcASqsTz">5장 웹에서 이미지 데이터 내려받기</a><br>
+					<a href="https://youtu.be/cV4mMBUUQ4o?list=PLc91J-KoFBX_wrskfjdz6AmhwpcASqsTz">5장 텍스트 데이터 내려받기</a><br>
+					<a href="https://youtu.be/tLWEFl7Gv50?list=PLc91J-KoFBX_wrskfjdz6AmhwpcASqsTz">5장 SNS 글 작성</a><br>
+					<a href="https://youtu.be/xgS32bUGawg?list=PLc91J-KoFBX_wrskfjdz6AmhwpcASqsTz">6장 싱글 뷰 애플리케이션으로 화면이 여러 개 있는 애플리케이션 만들기</a><br>
+
+					<div class="title">[동영상 강의]<div>
+					<a href="https://youtu.be/1tJfpVrO_b4?list=PL9kzervdzKxzBQ4UsMy4H_PANaTEApq_X">1차 0강</a><br>
 				</div>
 			</div>
 		</div>
